[build-system]
requires = ["setuptools>=45, <=67.7.2", "setuptools-scm[toml]>=6.2, <=7.1.0"]  # pin max versions of build deps and update as needed
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[[tool.mypy.overrides]]
module = [
    "ansible.*",
    "daemon.*",
    "pexpect",
]
ignore_missing_imports = true

[tool.pylint.main]
output-format = "colorized"
disable = [
  "all",

  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "C0301",  # line-too-long
  "R0902",  # too-many-instance-attributes
]

enable = [
  "C0209",  # consider-using-f-string
  "C0411",  # wrong-import-order
  "E1101",  # no-member
  "R0205",  # useless-object-inheritance
  "R1735",  # use-dict-literal
  "W0102",  # dangerous-default-value
  "W1202",  # logging-format-interpolation
  "W1203",  # logging-fstring-interpolation
]
