[build-system]
requires = ["setuptools>=45, <=69.0.2", "setuptools-scm[toml]>=6.2, <=8.0.4"]  # pin max versions of build deps and update as needed
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[[tool.mypy.overrides]]
module = [
    "ansible.*",
    "daemon.*",
    "pexpect",
]
ignore_missing_imports = true

[tool.pylint.main]
output-format = "colorized"
disable = [
  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "C0301",  # line-too-long
  "R0401",  # cyclic-import
  "R0801",  # duplicate-code
  "R0902",  # too-many-instance-attributes
  "R0903",  # too-few-public-methods
  "R0904",  # too-many-public-methods
  "R0911",  # too-many-return-statements
  "R0912",  # too-many-branches
  "R0913",  # too-many-arguments
  "R0914",  # too-many-locals
  "R0915",  # too-many-statements
  "W0221",  # arguments-differ
  "W0511",  # fixme
  "W0603",  # global-statement
  "W0718",  # broad-exception-caught
  "W0719",  # broad-exception-raised
  "W1514",  # unspecified-encoding
]
