[options]
install_requires =
    pexpect>=4.5
    packaging
    python-daemon
    pyyaml
    six
    # enable `groups` arg to entry_points missing in 3.9 stdlib importlib.metadata
    importlib-metadata>= 4.6,< 6.3; python_version<'3.10'

[flake8]
# W503 - Line break occurred before a binary operator
ignore = W503
max-line-length = 160
per-file-ignores =
    src/ansible_runner/display_callback/callback/awx_display.py:E402
