[metadata]
name = ansible-runner
author = Ansible, Inc.
author_email = info@ansible.com
summary = "Consistent Ansible Python API and CLI with container and process isolation runtime capabilities"
home_page = https://ansible-runner.readthedocs.io
project_urls =
    Source = https://github.com/ansible/ansible-runner
description_file = README.md
description_content_type = text/markdown
license = Apache Software License, Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.8
install_requires =
    pexpect>=4.5
    packaging
    python-daemon
    pyyaml
    six
    # enable `groups` arg to entry_points missing in 3.9 stdlib importlib.metadata
    importlib-metadata>= 4.6,< 6.3; python_version<'3.10'

[entry_points]
console_scripts =
    ansible-runner = ansible_runner.__main__:main

[flake8]
# W503 - Line break occurred before a binary operator
ignore = W503
max-line-length = 160
per-file-ignores =
    src/ansible_runner/display_callback/callback/awx_display.py:E402
